arreglos y agregado de dto para page